<resources>
    <string name="app_name">CamCast</string>
    <string name="app_title">Rex-CamCast</string>

    <string name="denied">Denied</string>
    <string name="accept">Accept</string>


    <!-- Menu -->
    <string name="menu_test">Test</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- Settings -->
    <string name="settings_category_general">General</string>
    <string name="settings_category_experimental">Experimental</string>
    <string name="settings_category_development">Development</string>
    <string name="settings_category_about">About</string>

    <string name="settings_server_title">Server address</string>
    <string name="settings_server_summary">Server address URI</string>
    <string name="settings_server_invalid_template">Failed to parse URI %1$s - %2$s</string>

    <string name="settings_export_log_title">Export log</string>
    <string name="settings_export_log_summary">Export log files to shared storage</string>
    <string name="settings_export_log_no_files">No log files</string>
    <string name="settings_export_log_success">Export log success</string>

    <string name="settings_about">About</string>

    <!-- About -->
    <string name="about_app_summary">"© 2026 RexStudio All rights reserved."</string>
    <string name="about_version_title">"Version"</string>
    <string name="about_version_summary" translatable="false">"%1$s r%2$d"</string>
</resources>
